# codebash

./: gentypes.sh  readme.md
client/: handlers.ts  index.html  package-lock.json  package.json  simpleLogger.ts  tsconfig.json  vite.config.ts
client/src/: app.tsx  index.tsx  state.ts
client/src/components/: ide.tsx  markdownView.module.scss  markdownView.tsx  problemView.tsx
client/src/components/code-editor/: codeEditor.tsx  languages.ts
client/src/components/code-editor/basic-languages/: cpp.ts  csharp.ts  (+8 more)
client/src/pages/: IDE.tsx  home.tsx  markdownEditor.module.scss  markdownEditor.tsx  match.tsx  mdWriter.tsx  styleTest.module.scss  styleTest.tsx  test.tsx
client/src/style/: codeEditor.module.css  ide.module.css  main.css  main.scss  markdown.module.css  match.module.css  mixins.scss
client/types/: handlers.ts
node-client/: package-lock.json  package.json
node-client/bindings/: ClientMessages.ts  types.ts
node-client/bindings/enums/: ClientMessage.ts  ClientMessages.ts
node-client/bindings/messageTypes/: ConnectionPayloadMessage.ts  HelloWorldMessage.ts
node-client/bindings/messageTypes/ClientMessage/: ChatMessage.ts
node-client/src/: index.ts  typeGenerator.ts
node-client/src/handlers/: chatMessageHandler.ts  handlerTypes.ts
node-client/src/protocolWrapper/: server.ts  socket.ts
rs_ws_client/: Cargo.toml
rs_ws_client/src/client/: main.rs
rs_ws_client/src/server/: main.rs
rs_ws_client/src/types/: lib.rs
safejs/: compare.js  package-lock.json  package.json  runtest.js  runtest.sh  unsafe.js
safejs/questions/add/: parser.js
