[package]
name = "rs_ws_client"
version = "0.1.0"
authors = ["S4more <guimsc@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
tokio = { version = "1", features = ["full"] }
log = "*"
futures-util = "0.3"
url = "2.2.2"
futures-channel = "0.3"
ts-rs =  "6.1"
serde = { version = "*", features = ["derive"] }
serde_json = "*"


[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[lib]
name = "types"
path = "src/types/lib.rs"